# market_place

./: README.md  compose.yml
inventory_service/: .env  Dockerfile.dev
inventory_service/app/: main.py
notification_service/: .env  Dockerfile.dev
notification_service/app/: main.py
order_service/: .env  Dockerfile.dev  pyproject.toml
order_service/app/: main.py  settings.py
payment_service/: .env  Dockerfile.dev  pyproject.toml
payment_service/app/: main.py
product_service/: .env  Dockerfile.dev
product_service/app/: main.py  models.py
user_service/: .env  Dockerfile.dev
user_service/app/: db.py  main.py  models.py
